# daredemo-slot

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
docs/: asset-prompts.md  composition-research.md
docs/design/: 00-overview.md  01-machine-model.md  02-lottery.md  03-reel-control.md  04-reel-layout.md  05-config-schema.md
src/core/: compliance.ts  control.ts  describe.ts  game.ts  judge.ts  layout-gen.ts  lottery.ts  nav.ts  recipes.ts  rng.ts  sim.ts  solve.ts  spec.ts  types.ts  validate.ts
src/machines/: at-beast.ts  ct-machine.ts  index.ts  sample-a.ts  shuchu.ts  stock-bb.ts  stock-sb.ts
src/tools/: symbol-pipeline.ts
src/ui/: App.tsx  bgm-audio.ts  bgm.ts  (+25 more)
tests/: blind-study.test.ts  compliance.test.ts  composition-research.test.ts  control.property.test.ts  ct-shuchu.test.ts  describe.test.ts  display-mode.test.ts  game.test.ts  instant.test.ts  layout-gen.test.ts  lottery.test.ts  music-diversity.test.ts  music-expression.test.ts  music-fuzz.slow.test.ts  music-snapshot.test.ts  music.test.ts  nav.test.ts  nes-apu.test.ts  opll-arrange.test.ts  opll-render.slow.test.ts  opll.test.ts  persist.test.ts  piece-diff.test.ts  recipes.test.ts  sfx-arrange.test.ts  sfx-design.test.ts  share.test.ts  spec.test.ts  subboard.test.ts  symbol-pipeline.test.ts  validate.test.ts
tools/: check-symbols.ts  degpt-assets.ts  draw-symbols-v3.ps1  prepare-generated-symbol.ts  process-panel.ts  process-symbols.ts
tools/otomad/: pyproject.toml
(+24 files in other folders)
