[project]
name = "otomad"
version = "0.1.0"
description = "BGM + SE素材から音MAD風音声を自動生成するツール"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "mido>=1.3",
]

[project.scripts]
otomad = "otomad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otomad"]
